# LLMEngine

./: .clang-format  CMakeLists.txt  README.md
src/kernels/: CMakeLists.txt  cal_paddingoffset.cu  cal_paddingoffset.h  cublas_util.cu  cublas_util.h  input_embedding.cu  input_embedding.h  linear.cu  linear.h  rsmnorm.cu  rsmnorm.h
src/utils/: macro.h  string_utils.h  tensor.h  vec_utils.h
src/weights/: base_weights.h
src/weights/llama/: embedding_weights.h  norm_weight.h
tests/: CMakeLists.txt  inputEmbedding.cu
